Added test setup (jest) to ensure some refactoring I'm doing doesn't break code, w/o having to manually check each time

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>Pixi.js Sandbox</title>
-	<link rel="stylesheet" href="style.css">
-	<!-- <script src="/js/pixi.min.js"></script> -->
-</head>
-<body>
-	<div id="display"></div>
+	<head>
+		<meta charset="utf-8">
+		<title>IT'S TETRIS</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+	<body>
+		<div id="display"></div>
 
-
-	<script src="/app.js"></script>
-</body>
+		<script src="/app.js"></script>
+	</body>
 </html>
